# franka_analytical_ik

./: README.md  franka_ik_pybind.cpp  setup.cfg  setup.py  test.py
tests/: test_franka_ik.py
