[metadata]
name = franka_ik
version = 0.1.0
author = Yanhao He and Steven Liu (franka_ik), Tasbolat Taunyazov (pybind), Domen Tabernik (pip package)
author_email = domen.tabernik@fri.uni-lj.si
description = Python package for Analytical Inverse Kinematics using Franka Hand data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skokec/franka_ik_pybind
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    pybind11

[options.extras_require]
tests =
    numpy
    scipy
    unittest

[options.package_data]
* = *.cpp

